--- a/Counter/index.html
+++ b/Counter/index.html
@@ -3,15 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>adh33shacks</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
 <body>
-    <h1>THis is my Counter Webpage</h1>
-    <h2 id="counter">0</h2>
+    <h1>adh33sh hacking tutorials</h1>
+    
+    <h2 id="counter" style="color: red">0</h2>
     <button class="adjustButton" onclick="modify(1)">Increment</button>
     <button class="adjustButton" onclick="modify(-1)">Decrement</button>
     <button id="resetButton" onclick="reset()">Reset</button>
+    <p>You can play with the buttons 
+        so you don't over exaggerate.
+    </p>
+    <p>Once your set you can click the link down below</p>
+
+    <p><a href="body.html">Click Here</a></p>
+
 </body>
 </html>
