--- a/Counter/index.html
+++ b/Counter/index.html
@@ -17,7 +17,7 @@
     <p>You can play with the buttons 
         so you don't over exaggerate.
     </p>
-    <p>Once your set you can click the link down below</p>
+    <p>Once you're set you can click the link down below</p>
 
     <p><a href="body.html">Click Here</a></p>
 
